# bumpi

./: .gitignore  .ruff.toml  README.md  action.yaml  pyproject.toml  ty.toml
.github/workflows/: ci.yaml
bumpi/: __init__.py  main.py
tests/: test_bumpi.py
